src/codegen/snapshots/hebi4__codegen__tests__block_full.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 2
  .locals
    v = r1
  .code
  0  lsmi r1, 0
  1  lsmi r0, 0
  2  ret
