src/codegen/snapshots/hebi4__codegen__tests__bool_false.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 1
  .code
  0  lfalse r0
  1  ret
