src/codegen/snapshots/hebi4__codegen__tests__str.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 1
  .code
  0  lstr r0, l0   ; l0="test"
  1  ret
