src/codegen/snapshots/hebi4__codegen__tests__variable_scope_assignment.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
OK
.fn @main
  params 0
  stack 2
  .locals
    a = r1
  .code
  0  lsmi r1, 1
  1  lsmi r1, 2
  2  ret
