src/codegen/snapshots/hebi4__codegen__tests__variable_scope_bad.snap
---
source: src/codegen/tests.rs
expression: snapshot
---
ERROR
could not resolve name
5 |  a
  |  ^
